--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -495,13 +495,14 @@
                                 <rect key="frame" x="130" y="408" width="295" height="312"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kQM-NH-drG">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kQM-NH-drG">
                                 <rect key="frame" x="63" y="588" width="32" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Next"/>
                                 <connections>
                                     <action selector="nextPersonButton:" destination="QRi-ft-NKl" eventType="touchUpInside" id="npp-zp-m3F"/>
                                     <action selector="startButton:" destination="QRi-ft-NKl" eventType="touchUpInside" id="Dht-qB-Z3x"/>
+                                    <segue destination="O9T-ol-uEL" kind="show" id="eaJ-4g-NAK"/>
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="B1Bb_v1_GameScreen" translatesAutoresizingMaskIntoConstraints="NO" id="Ppv-AR-Kd0">
@@ -562,6 +563,14 @@
                                 <color key="textColor" red="0.1843137255" green="0.30196078430000001" blue="0.48627450979999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xu6-7Y-GOf">
+                                <rect key="frame" x="162" y="354" width="51" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button" image="bPlay_v1_GameScreen"/>
+                                <connections>
+                                    <action selector="startButton2:" destination="QRi-ft-NKl" eventType="touchUpInside" id="QcV-tF-gEF"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.94509803920000002" green="0.98039215690000003" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="hXS-HM-p4H"/>
@@ -571,6 +580,7 @@
                         <outlet property="balloonA" destination="U3C-Lx-TUc" id="rwZ-tA-wfq"/>
                         <outlet property="balloonB" destination="7CP-QF-sxT" id="JIV-Xp-Cdy"/>
                         <outlet property="buttonStartOutlet" destination="AqE-c2-3Wu" id="Cwj-o1-cXA"/>
+                        <outlet property="buttonStartOutlet2" destination="xu6-7Y-GOf" id="JIJ-00-sn7"/>
                         <outlet property="minuteLabel" destination="vW1-Lc-u0N" id="fg6-cB-hpr"/>
                         <outlet property="name1Outlet" destination="y4e-7d-8ag" id="iNk-by-0gS"/>
                         <outlet property="name2Outlet" destination="HHQ-0k-8DP" id="h6i-yw-4aF"/>
